--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -7,3 +7,12 @@ $backgroundColor = #ffffff                  // 悬浮块背景色
 .bulletin-wrapper{
     background:#fff !important;
 }
+.category-wrapper .category-item{
+    box-shadow: 1px 1px 5px 1px #e1e0e0;
+    margin: .4rem 0;
+    border-radius: .25rem;
+    border:none !important;
+}
+.category-wrapper .category-item:hover {
+    background: #eee !important;
+}
